# sakerhetssm-wargame-problem

./: README.md
2023-final/pwn/ropabara/: challenge.yml
2025-final/blockchain/kebabbanken2/: Exploit.sol  challenge,yml  solve.sh
2025-final/blockchain/sl/: Exploit.sol  challenge,yml  solve.sh
2025-final/crypto/303_see_other/: challenge.yml  lelle-solve.py  theo-solve.py
2025-final/crypto/i_want_that_fish/: challenge.yml  lelle-solve.py  solve-zetatwo.py
2025-final/crypto/mitt_fina_tal_2/: .gitignore  alfreds_magic_tool.py  borts_secrets.txt  challenge.yml  lelle-solve.py  main2.py  megamögen.py
2025-final/crypto/scramble_and_bramble/: challenge.yml  flag.txt  main.py  output.txt  solve-lelle.py  solve-zetatwo.py
2025-final/forensics/cert/: README.md  challenge.yml
2025-final/forensics/msab/: challenge.yml
2025-final/osint/voiceofnature/: challenge.yml  solve.md
2025-final/pwn/alfreds_marketplace/: Makefile  chall.cpp  challenge.yml  liam-kvis-squid-lelle-solve.py  solve.py
2025-final/pwn/chatgcc/: challenge.yml  main  main.c  solve.py
2025-final/pwn/mitt_andra_program/: Makefile  build.sh  chall.c  challenge.yml  solve-valterw.py  solve-zetatwo.py
2025-final/pwn/premium-cryptor/: Makefile  challenge.c  challenge.yml  solve-ntomsic.py  solve-zetatwo.py
2025-final/pwn/windows-web-defender/: challenge,yml  challenge.yml  ripsquid_solve.py  solve.py  solve_template.py
2025-final/rev/QRGB/: challenge.yml  solve-andreaslonn.py  theo-solve.py
2025-final/rev/crackme2/: .gitignore  Makefile  challenge.yml  crackme2  solve-zetatwo.py
2025-final/rev/valinslagen/: build_chall.py  challenge.yml  paket  solve-zetatwo.py
2025-final/web/vykort/: challenge.yml  (+1 more)
2026-final/rev/fragmented/: .gitignore  Cargo.toml  GUIDE.md  Makefile  challenge.yml  generator.c  validate.sh
2026-final/rev/fragmented/modules/: module1.c  module2.c  module3.c  module4.c  module5.c  module6.c  module7.c  module8.c
2026-final/rev/fragmented/src/: main.rs
SCSC/2026-final/rev/qr-scanner/src/: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  resources.qrc
SCSC/2026-final/rev/qr-scanner/src/patches/: scodes.patch
SCSC/2026-final/rev/qr-scanner/src/qml/: Generator.qml  MainWindow.qml  Scanner.qml
SCSC/2026-final/rev/qr-scanner/src/src/: main.cpp
SCSC/2026-final/rev/split-brain/: .gitignore  ARCHITECTURE.md  Cargo.toml  GUIDE.md  Makefile  assembler.py  challenge.yml
SCSC/2026-final/rev/split-brain/.cargo/: config.toml
SCSC/2026-final/rev/split-brain/programs/: echo.asm  flag_checker.asm  hello.asm  nested_calls.asm
SCSC/2026-final/rev/split-brain/src/: error.rs  main.rs  message.rs  operations.rs
SCSC/2026-final/rev/split-brain/src/units/: arithmetic.rs  bitwise.rs  decoder.rs  fetcher.rs  memory.rs  mod.rs  registers.rs  system.rs
utils/: find_vacant_port.py
(+1204 files in other folders)
