[package]
name = "split-brain"
version = "0.1.0"
edition = "2024"

[dependencies]
fixed-map = "0.9.5"
nix = { version = "0.31.1", features = ["fs", "process"] } # Use the latest stable version
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2.0.18"

[profile.release]
opt-level = "z"       #  3 / z / s
lto = true         
codegen-units = 1   # Force single-threaded compilation (required for best LTO)
panic = "abort"     # Remove all stack unwinding/panic text logic
strip = true        # Remove symbols (don't give them function names)

[features]
debug_state = []
embed_challenge = []
